tests/neg/functions.stk
fun foo(x: Int): Int =
  var m = x x +
  val f = (n: Int) =>
    m n *   // error
  x => f
